Fixed issue with not hitting when below 17 with ace. Added Card class back to Blackjack.java. Added new game feature. Added automatic reveal when you bust.